// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductResult/> render() should render with SKU as subtitle 1`] = `
<Result
  image={
    Object {
      "alt": "Alt",
      "id": 1,
      "src": "src",
    }
  }
  subtitle="SKU: 11111"
  title="Product 1"
/>
`;

exports[`<ProductResult/> render() should render with number of variants as subtitle 1`] = `
<Result
  image={
    Object {
      "alt": "Alt",
      "id": 1,
      "src": "src",
    }
  }
  subtitle="2 variants"
  title="Product 1"
/>
`;

exports[`<ProductResult/> render() should render without subtitle 1`] = `
<Result
  image={
    Object {
      "alt": "Alt",
      "id": 1,
      "src": "src",
    }
  }
  subtitle={null}
  title="Product 1"
/>
`;
